# colorbang

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Readme.md
.claude/: README.md  settings.json
.claude/commands/: build-release.md  check-code.md
.claude/hooks/: approve-cargo.sh
.github/workflows/: pr-branch-check.yml  release.yml
src/: bullet.rs  enemy.rs  game_entity.rs  main.rs  particle.rs  player.rs  sound.rs
